- Added MSP430 Hw files and tcg test files to verify tcg decoded instructions

--- a/hw/block/Makefile.objs
+++ b/hw/block/Makefile.objs
@@ -13,3 +13,5 @@ obj-$(CONFIG_SH4) += tc58128.o
 
 obj-$(CONFIG_VIRTIO) += virtio-blk.o
 obj-$(CONFIG_VIRTIO) += dataplane/
+
+obj-$(CONFIG_MSP430) += msp430x1_flashrom.o
